--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>KitsCon 16.1 - Snow Edition</title>
+	<title>KitsCon 16.2 - The Salted Herring edition (tm)</title>
 	<meta charset="utf8"/>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style/reset.css">
-	<link rel="stylesheet" href="style/font-awesome-4.5.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+
 </head>
 <body>
 	<div id="main"></div>
-	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
