--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ h1 sub
 
         <p>Tidsplan:</p>
 
-<p>Vi samlas 2016-10-07 08.30 på Salt & Sill (karta) fredag morgon för incheckning och 
+<p>Vi samlas 2016-10-07 08.30 på Salt & Sill <a href="https://goo.gl/maps/koQwj6QMJQ52">(karta)</a> fredag morgon för incheckning och 
 morgonkaffe. Konferensen börjar 09.00. Vi äter förmiddagsfika, lunch och 
 eftermiddagsfika och däremellan lyssnar på spännande föredrag. Kl 17.30 bryter
 vi för Ostronskola, en ÖL™, bastubad, matlagningskurs och middag. På lördagen
@@ -462,7 +462,26 @@ vi för Ostronskola, en ÖL™, bastubad, matlagningskurs och middag. På lörda
 
 <p>Konferensrum:</p>
 <p>Konferenslokalen Sillsalteriet är utrustad med projektor, duk, högtalare, DVD¬spelare wi-fi, whiteboard, frukt, godis, block och pennor. Vi tar med AppleTV, MiraCast, Google chrome för trådlösa presentationer.</p>        
-        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p></p>        
+<p>tidrapport FTW!</p>        
 </div></div>
 
 </body>
