update start, stop for salaryLock

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ body
 	color: #ff6;
 	background-color: #000;
 	overflow: hidden;
+        z-index: +2;
 }
 
 p#start
@@ -459,7 +460,7 @@ table, th, td {
 
 <h1>KITS CON<sub>The salted herring edition™</sub></h1>
 
-<div id="titles"><div id="titlecontent">
+<div id="titles" style="z-index: +4;"><div id="titlecontent">
 
        
         
