update start, stop for salaryLock

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ function mouse_wheel(evt)
 function start()
 
 	{
-            if (!(isMobile.apple.phone || isMobile.android.phone || isMobile.seven_inch) || true) {
+            if (!(isMobile.apple.phone || isMobile.android.phone || isMobile.seven_inch)) {
                 resize();
                 anim();
             }
