update start, stop for salaryLock

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ table, th, td {
 
 
 
-<p id="start">A short time in the future,<br/>very, very close&hellip;</p>
+<p id="start">Kompetensspridning, salt i håret,<br/> och kanske några ÖL™ i frisk havsmiljö</p>
 
 <h1>KITS CON<sub>The salted herring edition™</sub></h1>
 
