--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ table, th, td {
 
 
 
-<p id="start">Kompetensspridning, salt i håret,<br/> och kanske några ÖL™ i frisk havsmiljö</p>
+<p id="start">Kompetensspridning,<br/>salt i håret,<br/>och kanske några ÖL™<br/>i frisk havsmiljö</p>
 
 <h1>KITS CON<sub>The salted herring edition™</sub></h1>
 
