--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                             </ul>               
 
                             <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                                <div class="close-icon"></div>
-                            </button>
+                                <div class="close-icon"/></div>
+                        </button>
 
-                        </div>
                     </div>
+                </div>
 
                 </div>
             </nav>
@@ -119,9 +119,14 @@
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">06.00 - 12.00&nbsp;<strong>Resa till Geneve</strong></li>
                                         <li class="list-group-item">12.00 - 13.00 <strong>Lunch</strong></li>
-                                        <li class="list-group-item">13.00 - 17.00 <strong>Konferens</strong></li>
-                                        <li class="list-group-item">17.00 - 18.00<em> </em><strong>Fritid</strong></li>
-                                        <li class="list-group-item">18.00 - 20.00 <strong>Walking city tour of Geneve</strong></li>
+                                        <li class="list-group-item">13.00 - 15.00 <strong>Konferens</strong></li>
+                                        <li class="list-group-item">15.00 - 15.30 <strong>Kaffepaus</strong></li>
+                                        <li class="list-group-item">15.30 - 17.30 <strong>Konferens</strong></li>
+                                        <li class="list-group-item">18.00 - 20.00 <strong>Walking city tour of Geneve</strong>
+                                            <ul class="list-group list-group-flush">
+                                                <li class="list-group-item">Hämtning sker vid hotellet 18.00 och vi släpps av vid restaurangen</li>
+                                            </ul>
+                                        </li>
                                         <li class="list-group-item">20.00 - 21.00 <strong>Restaurang ( <a href="http://www.hdvglozu.ch/" target="_blank">http://www.hdvglozu.ch/</a> )</strong></li>
                                     </ul>
                                 </div>                      
@@ -138,7 +143,7 @@
                                         <li class="list-group-item"><strong>KITS</strong> - Patrik Nilsson ( 45 min )</li>
                                         <li class="list-group-item"><strong>Asure</strong> - Sture Svensson ( 45 min )</li>
                                         <li class="list-group-item"><strong>Ledarskap</strong> - Joakim Backede ( 45 min )</li>
-                                        <li class="list-group-item"><strong>Swagger</strong> - Hoi-Man Lui ( 45 min )</li><p></p>
+                                        <li class="list-group-item"><strong>Swagger</strong> - Hoi-Man Lui ( 45 min )</li>
                                     </ul>
                                 </div>
                             </div>
@@ -313,7 +318,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Resa till Geneve</h5></p><p><br></p><p>
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Resa till Geneve</h5><p><br></p><p>
                                 Flyg ( SK433 ) avgår från Göteborg Landvetter klockan 06.55. Incheckning skall ske senast 2 timmar innan enligt resebolaget.</p><p>
                                 <br>Vi kommer att ankomma till Köpenhamn 07.40 och byta flight till SK613 mot Geneve med avgång 08.20.&nbsp;</p><p>
                                 <br>Ankomst till Geneve beräknas att bli 10.25 där en buss med skylt "KITS" väntar på oss för transfer till hotellet.</p></blockquote></div>
@@ -336,7 +341,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Studiebesök CERN</h5><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><a href="http://home.cern/" target="_blank">http://home.cern/</a></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Studiebesök CERN</h5><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><a href="http://home.cern/" target="_blank">http://home.cern/</a></span><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
                                     Eftersom detta studiebesök kommer att innehålla en hel del tid där vi får stå upp och gå mycket så rekomenderas bra skor.
                                     <br/></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
                                     <br/>08.00 avgår bussen till CERN från hotellet.</span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
@@ -353,7 +358,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Tips på saker att hitta på i Geneve på lördagen</h5></p><p><br></p><p>Uppdatering kommer inom kort ...........</p></blockquote></div>
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Tips på saker att hitta på i Geneve på lördagen</h5><p><br></p><p>Uppdatering kommer inom kort ...........</p></blockquote></div>
                 </div>
             </div>
 
@@ -363,7 +368,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Hemresa</h5></p><p><br></p><p>
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Hemresa</h5><p><br></p><p>
                                 16.45 på söndagen är det transfer till flygplatsen. Även här skall vi sikta på att checka in 2 timmar innan avgång.</p><p>
                                 <br/>Flyg mot Köpenhamn ( SK618 ) avgår 19.20 från Geneve och ankommer till Köpenhamn 21.15.</p><p>
                                 <br/>Flyg mot Göteborg, Landvetter ( SK448 ) avgår 22.45 från Köpenhamn och ankommer 23.30 på Landvetter.</p></blockquote></div>
@@ -455,9 +460,9 @@
                                                 <li class="list-group-item">Whenever&nbsp;<strong>Eget käk, ta som utlägg för KITS räkning</strong></li>                                                
                                                 <li class="list-group-item">20.00&nbsp;<strong>3-Rätters middag ( Kryssning )</strong>
                                                     <ul class="list-group-item-info">
-                                                        <li class="list-group-item">Förrätt:&nbsp;<strong>Kommer snart</strong></li>
-                                                        <li class="list-group-item">Huvudrätt:&nbsp;<strong>Kommer snart</strong></li>
-                                                        <li class="list-group-item">Efterrätt:&nbsp;<strong>Kommer snart</strong></li>
+                                                        <li class="list-group-item">Förrätt:&nbsp;<strong>Tail lobster marinated in pepper syrup, fennel mousseline with vanilla, purple carrot shavings and yuzu lemon coulis</strong></li>
+                                                        <li class="list-group-item">Huvudrätt:&nbsp;<strong>Roasted sea bass withj thyme, basmati rice on Panch Phoran and wild grasses</strong></li>
+                                                        <li class="list-group-item">Efterrätt:&nbsp;<strong>Baba au rhum, exotic fruits and whipped cream</strong></li>
                                                     </ul>
                                                 </li>                                                
                                             </ul>
