Nya tillägg i schema

--- a/index.html
+++ b/index.html
@@ -262,11 +262,15 @@
 
                                 <div class="mbr-plan-list">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">07.00 - 09.00&nbsp;<strong>Frukost &amp; Utcheckning</strong></li>
-                                        <li class="list-group-item">09.00 - 12.00 <strong>Konferens</strong></li>
-                                        <li class="list-group-item">12.00 - 13.00&nbsp;<strong>Lunch</strong></li>
+                                        <li class="list-group-item">07.00 - 09.00 <strong>Frukost & Utcheckning</strong></li>
+                                        <li class="list-group-item">09.00 - 10.00 <strong>Konferens</strong></li>
+                                        <li class="list-group-item">10.00 - 10.30 <strong>Kaffepaus</strong></li>
+                                        <li class="list-group-item">10.30 - 12.00 <strong>Konferens</strong></li>
+                                        <li class="list-group-item">12.00 - 13.00 <strong>Lunch</strong></li>
                                         <li class="list-group-item">13.00 - 15.00 <strong>Konferens</strong></li>
-                                        <li class="list-group-item">16.45 - 23.30&nbsp;<strong>Transfer och hemresa till GBG</strong></li>
+                                        <li class="list-group-item">15.00 - 15.30 <strong>Eftermiddagskaffe</strong></li>
+                                        <li class="list-group-item">15.30 ~ 16.00 <strong>Konferens</strong></li>
+                                        <li class="list-group-item">16.45 - 23.30 <strong>Transfer och hemresa till GBG</strong></li>
                                     </ul>
                                 </div>                      
                             </div>
@@ -283,12 +287,13 @@
                                 <div class="mbr-plan-list">
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item"><strong>GraphQl</strong> - Gustav Jorlöv ( 45 min )</li>
-                                        <li class="list-group-item"><strong>Trendspaning</strong>&nbsp;- Joakim Kemeny, Patrik Nilsson ( 45 min )</li>
-                                        <li class="list-group-item"><strong>Kotlin</strong>&nbsp;- Olof Gunnarsson ( 30 min )</li>
+                                        <li class="list-group-item"><strong>Trendspaning</strong>- Joakim Kemeny, Patrik Nilsson ( 45 min )</li>
+                                        <li class="list-group-item"><strong>Kotlin</strong> - Olof Gunnarsson ( 30 min )</li>
                                         <li class="list-group-item"><strong>Java Web World</strong> - Soroush Nejad ( 15 min )</li>
-                                        <li class="list-group-item"><strong>Web pack</strong> - Wiliam Bernting ( 45 min )</li>
-                                        <li class="list-group-item"><strong>IOT labb</strong> - Mikael Weckstén ( 30 &nbsp;min )</li>
-                                        <li class="list-group-item"><strong>Open source sårbarhet </strong>- Tobias Lans, Mikael Weckstén ( 15 min )</li>
+                                        <li class="list-group-item"><strong>Datavalidering</strong> - Anders Falkström ( 30 min )</li>
+                                        <li class="list-group-item"><strong>Web pack</strong> - Wiliam Bernting ( 15 min )</li>
+                                        <li class="list-group-item"><strong>IOT labb</strong> - Mikael Weckstén ( 30 min )</li>
+                                        <li class="list-group-item"><strong>Open source sårbarhet </strong> - Tobias Lans, Mikael Weckstén ( 15 min )</li>
                                     </ul>
                                 </div>                      
                             </div>
