--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
                 <div class="row">
                     <div class="col-xs-12 lead"><blockquote><p><h5>Resa till Geneve</h5><p><br></p><p>
                                 Flyg ( SK433 ) avgår från Göteborg Landvetter klockan 06.55. Incheckning skall ske senast 2 timmar innan enligt resebolaget.</p><p>
+                                Det kommer att vara gruppincheckning som jag löser på plats med min bokningsreferens. Men var ändå på plats absolut senast 05.30 ifall det blir något strul.
+                                <br>Maxvikt på bagage som checkas in är 23Kg</p><p>
+                                <br>Du kan ta med en kabinväska (högst 8 kg och 55 x 40 x 23 cm (H x B x D)) och en handväska eller datorväska (40 x 30 x 15 cm (H x B x D) ombord.</p><p>
                                 <br>Vi kommer att ankomma till Köpenhamn 07.40 och byta flight till SK613 mot Geneve med avgång 08.20.&nbsp;</p><p>
                                 <br>Ankomst till Geneve beräknas att bli 10.25 där en buss med skylt "KITS" väntar på oss för transfer till hotellet.</p></blockquote></div>
                 </div>
@@ -363,7 +366,27 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Tips på saker att hitta på i Geneve på lördagen</h5><p><br></p><p>Uppdatering kommer inom kort ...........</p></blockquote></div>
+                    <div class="col-xs-12 lead">
+                        <blockquote><p><h5>Tips på saker att hitta på i Geneve på lördagen</h5><p><br></p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><strong><a href="http://www.les-brasseurs.ch/site/en/geneva/home/" target="_blank" style="color:black">Microbryggeri</a></li></strong>
+                                <li class="list-group-item"><strong><a href="https://www.geneve.com/en/object/parks-residences-tours-89.product/" target="_blank" style="color:black">Minitåg i Geneves</a></li> </strong>
+                                <li class="list-group-item"><strong><a href="https://www.jardin5sens.net/" target="_blank" style="color:black">Trädgårdar i Yvoire</a></li> </strong>
+                                <li class="list-group-item"><strong><a href="https://grottesdevallorbe.ch/" target="_blank" style="color:black">Vallorbe grottorna</a></li> </strong>
+                                <li class="list-group-item"><strong><a href="https://www.geneve.com/en/object/down-the-arve-river-on-a-raft-or-a-canoe-kayak-229.product/" target="_blank" style="color:black">Kanot/Kajak</a></li> </strong>
+                                <li class="list-group-item"><strong><a href="http://www.arrivalguides.com/sv/Travelguides/Europe/Switzerland/GENEVE/doandsee" target="_blank" style="color:black">Länk till turistguide</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Jet d´Eau - världens största vattenfontän</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">FN-Högkvarteret  - Palais des Nations</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Botanska Trädgården - Jardin Botanique</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Place du Bourg-de –four (charmigt torg med 1700-talsfontän)</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Klockmuseet – Patek Philippe</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Cathedrale de St-Pierre – berömd katedral i Geneve</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Bain de Paquis-strand – Njut av lite strandliv mitt i stan ( man kan bada, få massage o götta sig )</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Moderna museet</a></li> </strong>
+                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Plain Palais – Loppmarknad varje lördag mellan 0800-1600 (i närliggande område ligger många konstgallerier)</a></li> </strong>
+                            </ul>
+                        </blockquote>
+                    </div>
                 </div>
             </div>
 
