--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 lead"><blockquote><p><h5>Resa till Geneve</h5><p><br></p><p>
-                                Flyg ( SK433 ) avgår från Göteborg Landvetter klockan 06.55. Incheckning skall ske senast 2 timmar innan enligt resebolaget.</p><p>
-                                Det kommer att vara gruppincheckning som jag löser på plats med min bokningsreferens. Men var ändå på plats absolut senast 05.30 ifall det blir något strul.
+                                Flyg ( SK433 ) avgår från Göteborg Landvetter klockan 06.55.
+                                Det kommer att vara gruppincheckning som jag löser på plats med min bokningsreferens. Men var ändå på plats absolut senast 05.30 ifall det blir något strul.</p><p>
                                 <br>Maxvikt på bagage som checkas in är 23Kg</p><p>
                                 <br>Du kan ta med en kabinväska (högst 8 kg och 55 x 40 x 23 cm (H x B x D)) och en handväska eller datorväska (40 x 30 x 15 cm (H x B x D) ombord.</p><p>
                                 <br>Vi kommer att ankomma till Köpenhamn 07.40 och byta flight till SK613 mot Geneve med avgång 08.20.&nbsp;</p><p>
