--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
 
         </section>
 
+        <section class="mbr-section article mbr-section__container" id="content2-h" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Boende</h5>
+                                <br>Vi kommer att bo i dubbelrum 2 och 2 och lotten har avgjort vem man delar rum med.                           
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <section class="mbr-section mbr-section__container" id="map2-b" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
             <div class="container">
                 <div class="row">
@@ -345,11 +357,13 @@
             </div>
         </section>
 
+
+
         <section class="mbr-section article mbr-section__container" id="content2-c" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 lead"><blockquote><p><h5>Studiebesök CERN</h5><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><a href="http://home.cern/" target="_blank">http://home.cern/</a></span><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
+                    <div class="col-xs-12 lead"><blockquote><p><h5>Studiebesök CERN</h5><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><a href="http://home.cern/" target="_blank" style="color:black">http://home.cern/</a></span><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
                                     Eftersom detta studiebesök kommer att innehålla en hel del tid där vi får stå upp och gå mycket så rekomenderas bra skor.
                                     <br/></span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
                                     <br/>08.00 avgår bussen till CERN från hotellet.</span></p><p><span style="font-size: 1.07rem; line-height: 1.5; font-style: normal;">
@@ -369,21 +383,21 @@
                     <div class="col-xs-12 lead">
                         <blockquote><p><h5>Tips på saker att hitta på i Geneve på lördagen</h5><p><br></p>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><strong><a href="http://www.les-brasseurs.ch/site/en/geneva/home/" target="_blank" style="color:black">Microbryggeri</a></li></strong>
-                                <li class="list-group-item"><strong><a href="https://www.geneve.com/en/object/parks-residences-tours-89.product/" target="_blank" style="color:black">Minitåg i Geneves</a></li> </strong>
-                                <li class="list-group-item"><strong><a href="https://www.jardin5sens.net/" target="_blank" style="color:black">Trädgårdar i Yvoire</a></li> </strong>
-                                <li class="list-group-item"><strong><a href="https://grottesdevallorbe.ch/" target="_blank" style="color:black">Vallorbe grottorna</a></li> </strong>
-                                <li class="list-group-item"><strong><a href="https://www.geneve.com/en/object/down-the-arve-river-on-a-raft-or-a-canoe-kayak-229.product/" target="_blank" style="color:black">Kanot/Kajak</a></li> </strong>
-                                <li class="list-group-item"><strong><a href="http://www.arrivalguides.com/sv/Travelguides/Europe/Switzerland/GENEVE/doandsee" target="_blank" style="color:black">Länk till turistguide</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Jet d´Eau - världens största vattenfontän</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">FN-Högkvarteret  - Palais des Nations</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Botanska Trädgården - Jardin Botanique</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Place du Bourg-de –four (charmigt torg med 1700-talsfontän)</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Klockmuseet – Patek Philippe</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Cathedrale de St-Pierre – berömd katedral i Geneve</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Bain de Paquis-strand – Njut av lite strandliv mitt i stan ( man kan bada, få massage o götta sig )</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Moderna museet</a></li> </strong>
-                                <li class="list-group-item"><strong><a target="_blank" style="color:black">Plain Palais – Loppmarknad varje lördag mellan 0800-1600 (i närliggande område ligger många konstgallerier)</a></li> </strong>
+                                <li class="list-group-item"><a href="http://www.les-brasseurs.ch/site/en/geneva/home/" target="_blank" style="color:black">Microbryggeri ( länk )</a></li>
+                                <li class="list-group-item"><a href="https://www.geneve.com/en/object/parks-residences-tours-89.product/" target="_blank" style="color:black">Minitåg i Geneves ( länk )</a></li> 
+                                <li class="list-group-item"><a href="https://www.jardin5sens.net/" target="_blank" style="color:black">Trädgårdar i Yvoire ( länk )</a></li> 
+                                <li class="list-group-item"><a href="https://grottesdevallorbe.ch/" target="_blank" style="color:black">Vallorbe grottorna ( länk )</a></li> 
+                                <li class="list-group-item"><a href="https://www.geneve.com/en/object/down-the-arve-river-on-a-raft-or-a-canoe-kayak-229.product/" target="_blank" style="color:black">Kanot/Kajak ( länk )</a></li> 
+                                <li class="list-group-item"><a href="http://www.arrivalguides.com/sv/Travelguides/Europe/Switzerland/GENEVE/doandsee" target="_blank" style="color:black">Turistguide Geneve ( länk )</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Jet d´Eau - världens största vattenfontän</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">FN-Högkvarteret  - Palais des Nations</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Botanska Trädgården - Jardin Botanique</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Place du Bourg-de –four (charmigt torg med 1700-talsfontän)</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Klockmuseet – Patek Philippe</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Cathedrale de St-Pierre – berömd katedral i Geneve</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Bain de Paquis-strand – Njut av lite strandliv mitt i stan ( man kan bada, få massage o götta sig )</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Moderna museet</a></li> 
+                                <li class="list-group-item"><a target="_blank" style="color:black">Plain Palais – Loppmarknad varje lördag mellan 0800-1600 (i närliggande område ligger många konstgallerier)</a></li> 
                             </ul>
                         </blockquote>
                     </div>
@@ -412,6 +426,12 @@
                     <div class="row">
                         <div class="col-xs-12 text-xs-center">
                             <h3 class="mbr-section-title display-2">Mat</h3>
+                            
+                            <div class="col-xs-12 lead"><blockquote><p><h5>Dresscode</h5>
+                                <br>När vi besöker restauranger så tar man det man vill ha på sig. 
+                                <br>Mankini kanske ej är att föredra men vill man ha kavaj och skjorta så tar man det och vill man ha t-shirt och jeans så tar man det. 
+                                <br><br>Vi skall ha det härligt tillsammans, det är fokus!                           
+                            </div>
 
                         </div>
                     </div>
