--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="5; url=http://example.com/">
+<meta http-equiv="refresh" content="5; url=http://vodkaredbull.se/wordpress">
