--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Green Gnome</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Gnome</title>
 
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>KitsCon 18:1</h1>
-  <h2>the Green Gnome Edition</h2>
-  <div class="pat">
-    <p class="marquee">&#128679; ... bygge pågår ... &#128679;</p>
-  </div>
-  <script src="main.js"></script>
+    <h1 class="blink">KitsCon 18:1</h1>
+    <h2>the Green Gnome Edition</h2>
+    <div class="pat">
+        <p class="marquee">&#128679; ... bygge pågår ... &#128679;</p>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
