--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="blink">KitsCon 18:1</h1>
+    <h1 class="blinka">KitsCon 18:1</h1>
     <h2>the Green Gnome Edition</h2>
     <div class="pat">
         <p class="marquee">&#128679; ... bygge pågår ... &#128679;</p>
