--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Green Gnome</title>
     <link rel="stylesheet" href="styles.css">
 
-    <script src="https://code.angularjs.org/1.5.9/angular.min.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.5.9/angular-route.min.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.5.9/angular-resource.min.js" type="text/javascript"></script>
+    <script src="angular.min.js" type="text/javascript"></script>
+    <script src="angular-route.min.js" type="text/javascript"></script>
+    <script src="angular-resource.min.js" type="text/javascript"></script>
     <script>
         var app = angular.module('app', ['ngResource', 'ngRoute']);
     </script>
