--- a/kitscon.html
+++ b/kitscon.html
@@ -3,7 +3,7 @@
         <li class="put">{{value.forelasning}}</li>
         <ul>
             <div ng-repeat="(key1, value1) in value.info">
-                <li class="ko">{{value1.start}}-{{value1.stop}}:{{value1.beskrivning}}</li>
+                <li class="ko">{{value1.start}}-{{value1.stop}}:{{value1.aktivitet}} - {{value1.vem}}</li>
             </div>
         </ul>
     </div>
