--- a/contact.html
+++ b/contact.html
@@ -8,3 +8,9 @@
         </ul>
     </div>
 </ul>
+
+
+
+<div class="cont">
+    <img src="https://r.hswstatic.com/w_907/gif/rainbow-myth-2.jpg" class="avatar">
+</div>
