--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Gnome</title>
-    <link rel="stylesheet" href="styles.css">
-
-    <script src="angular.min.js" type="text/javascript"></script>
-    <script src="angular-route.min.js" type="text/javascript"></script>
-    <script src="angular-resource.min.js" type="text/javascript"></script>
-    <script>
-        var app = angular.module('app', ['ngResource', 'ngRoute']);
-    </script>
-</head>
-
-<body ng-app="app" ng-controller="MainController" ng-class="koko">
-    <script src="app.js"></script>
-
-    <nav>
-        <ul>
-            <li>
-                <a href="#main"><img src="icon.png"></a>
-            </li>
-            <li>
-                <a href="#info" >Info</a>
-            </li>
-            <li>
-                <a href="#schema">Schema</a>
-            </li>
-            <li>
-                <a href="#kitscon">KitsCon</a>
-            </li>
-            <li>
-                <a href="#contact">Annat</a>
-            </li>
-        </ul>
-    </nav>
-
-    <div ng-view></div>
-
-</body>
-
-</html>
+<meta http-equiv="refresh" content="0; url=https://kitsbeta.netlify.com/kitscon/kitscon_18_2">
