Change KitsCon url

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://kitsbeta.netlify.com/kitscon/kitscon_18_2">
+<meta http-equiv="refresh" content="0; url=https://kits.se/kitscon">
